# resume-cli

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
mock_data/: extract.json  score.json
prompts/: extract.txt  score.txt
resume_cli/: __init__.py  llm.py  main.py  models.py  parser.py  utils.py
tests/: test_main.py
